--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/">Blog | 博客</a></li>
+  <li><a href="{{ root_url }}/aboutme/">About Me | 关于我</a></li>
+  <li><a href="{{ root_url }}/blog/archives">Archives | 归档</a></li>
 </ul>
